# helix-perp

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/premium-frontend/: SKILL.md
.claude/skills/premium-frontend/references/: recipes.md
.github/workflows/: ci.yml  deploy.yml  keeper.yml
contracts/collateral_vault/: Cargo.toml
contracts/collateral_vault/src/: lib.rs  test.rs
contracts/collateral_vault/test_snapshots/test/: cannot_set_engine_twice.1.json  first_deposit_mints_one_to_one.1.json  refuses_payout_beyond_liquidity.1.json  trader_loss_accrues_to_lp.1.json  trader_profit_paid_by_lp.1.json
contracts/market_registry/: Cargo.toml
contracts/market_registry/src/: lib.rs  test.rs
contracts/market_registry/test_snapshots/test/: add_and_read_market.1.json  global_pause_toggles.1.json  rbac_denies_non_pauser.1.json  rejects_invalid_config.1.json  roles_seeded_at_construction.1.json
contracts/mock_oracle/: Cargo.toml
contracts/mock_oracle/src/: lib.rs  test.rs
contracts/mock_oracle/test_snapshots/test/: explicit_timestamp_for_stale_simulation.1.json  set_and_read_price.1.json
contracts/mock_usdc/: Cargo.toml
contracts/mock_usdc/src/: lib.rs  test.rs
contracts/mock_usdc/test_snapshots/test/: faucet_mints_and_transfers.1.json  faucet_rejects_invalid_amount.1.json  metadata_and_initial_supply.1.json
contracts/oracle_adapter/: Cargo.toml
contracts/oracle_adapter/src/: lib.rs  test.rs
contracts/oracle_adapter/test_snapshots/test/: normalizes_reflector_14dp_to_7dp.1.json  rejects_excessive_deviation.1.json  rejects_non_positive_price.1.json  rejects_stale_price.1.json  rejects_unknown_feed.1.json
contracts/perp_engine/: Cargo.toml
contracts/perp_engine/src/: lib.rs  test.rs
contracts/perp_engine/test_snapshots/test/: add_and_remove_margin.1.json  cancel_limit_order_refunds_escrow_and_nets_lp_to_zero.1.json  funding_accrues_and_longs_pay.1.json  healthy_position_cannot_be_liquidated.1.json  limit_order_escrows_then_fills_when_triggered.1.json  loss_is_paid_to_the_vault.1.json  only_owner_can_close.1.json  open_long_records_position_and_oi.1.json  open_profit_close_round_trip.1.json  orders_are_rbac_and_owner_gated.1.json  rbac_only_keeper_can_liquidate_or_fund.1.json  rejects_over_leverage_and_max_oi.1.json  stop_loss_closes_position_when_triggered.1.json  underwater_position_is_liquidated_by_keeper.1.json
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
deploy/: testnet.json
keeper/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
keeper/src/: config.ts  index.ts  indexer.ts  keeper.ts  logger.ts  markets.ts  reflector.ts  stellar.ts
scripts/: deploy_testnet.ps1  refresh_oracle.ps1  upgrade_contract.ps1
web/: .env.example  .eslintrc.json  .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  shot.mjs  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/activity/: page.tsx
web/src/app/(app)/analytics/: page.tsx
web/src/app/(app)/leaderboard/: page.tsx
web/src/app/(app)/portfolio/: page.tsx
web/src/app/(app)/settings/: page.tsx
web/src/app/(app)/trade/: page.tsx
web/src/app/(app)/transactions/: page.tsx
web/src/app/(app)/vault/: page.tsx
web/src/components/brand/: hero-preview.tsx  logo.tsx
web/src/components/charts/: area.tsx
web/src/components/market/: market-stats.tsx  price-chart.tsx
web/src/components/positions/: manage-dialog.tsx  open-orders.tsx  positions-table.tsx
web/src/components/shell/: get-funds.tsx  nav-items.ts  sidebar.tsx  topbar.tsx  wallet-button.tsx
web/src/components/trade/: order-ticket.tsx
web/src/components/ui/: aurora.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  empty.tsx  grain.tsx  input.tsx  reveal.tsx  segmented.tsx  skeleton.tsx  stat.tsx  toaster.tsx  value.test.tsx  value.tsx
web/src/config/: deployment.json  index.ts
web/src/hooks/: use-chain.ts
web/src/lib/: format.test.ts  format.ts  trade.test.ts  trade.ts  utils.ts
web/src/lib/stellar/: client.ts  contracts.ts  events.ts  indexer.ts  scval.ts  types.ts
web/src/lib/tx/: store.ts
web/src/lib/ui/: live-price.ts  prefs.ts  toast.ts
web/src/lib/wallet/: store.ts
