[package]
name = "oracle_adapter"
description = "Price abstraction over Reflector with stale/deviation/positivity safety guards"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
helix-shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock_oracle = { path = "../mock_oracle" }
